overflow issue

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,3 +1,8 @@
+html,
+body {
+    overflow-x: hidden;
+}
+
 header,
 section {
     scroll-snap-align: start;
@@ -54,10 +59,6 @@ button {
 
 .skipToMain:focus-within {
     left: 0;
-}
-
-.scrollContainer {
-    overflow-x: hidden;
 }
 
 .scrollContainer {
